Revision history for Playwright

0.005 2021-03-24 TEODESIAN
    [BUG FIXES]
    - Prevent double destroy in the event of quit() being called
    - Improve documentation
    - Adjust auto-install process to work better on windows, and not leak stderr in some contexts.

0.004 2021-03-19 TEODESIAN
    [BUG FIXES]
    - Adjust spec parser for newer Playwright spec versions

0.003 2021-03-16 TEODESIAN
    [BUG FIXES]
    - Fix broken testsuite

0.002 2021-02-10 TEODESIAN
    [BUG FIXES]
    - Declare perl 5.28 to be minimum version

0.001 2020-11-02 TEODESIAN
    - First release to CPAN